--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Page One</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="Queries.css">
 </head>
 <body>
     <div class="main">
@@ -17,9 +18,23 @@
                 <li class="navlinks" ><a href="#details">AboutUs</a></li>
                 <li class="navlinks" ><a href="#">Cart <i class="fa-solid fa-cart-shopping"></i> </a></li>
                 <li class="navlinks" ><a href="#">Shop <i class="fa-solid fa-shop"></i> </a></li>
-                <li><a class="secondarybutton" href="#">Signin</a></li>
+                <li><a class="link secondarybutton" href="#">Signin</a></li>
                 <li><a class="primarybutton" href="#">Signup</a></li>
+                <li onclick="showsidebar()" class="menubutton" ><a href="#"><i class="fa-solid fa-bars"></i></a></li>
             </ul>
+
+            <ul class="sidebar" >
+                <li onclick="hidesidebar()" ><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
+                <li class="navlinks link" ><a href="#">Home</a></li>
+                <li class="navlinks link" ><a href="#nichesection">Niches</a></li>
+                <li class="navlinks link" ><a href="#details">AboutUs</a></li>
+                <li class="navlinks link" ><a href="#">Cart</a></li>
+                <li class="navlinks link" ><a href="#">Shop</a></li>
+                <li class="link" ><a href="#">Signin</a></li>
+                <li class="link" ><a href="#">Signup</a></li>
+                <li></li>
+            </ul>
+
         </nav>
 
         <section class="hero flex">
@@ -37,7 +52,7 @@
                 <h3>Space-Human History</h3>
                 <p>A thrilling journey beyond Earth.</p>
                 <p>$10 Only</p>
-                <a class="primarybutton"  href="#">SHOP NOW <i class="fa-solid fa-arrow-right"></i></a>
+                <a class="primarybutton beep"  href="#">SHOP NOW <i class="fa-solid fa-arrow-right"></i></a>
 
             </div>
             <div class="card flex">
@@ -45,7 +60,7 @@
                 <h3>HOW To THINK LIKE SOCRATES</h3>
                 <p>Socratic thinking transforms perspectives.</p>
                 <p>$10 Only</p>
-                <a class="primarybutton"  href="#">SHOP NOW <i class="fa-solid fa-arrow-right"></i></a>
+                <a class="primarybutton cardButton"  href="#">SHOP NOW <i class="fa-solid fa-arrow-right"></i></a>
 
             </div>
             <div class="card flex">
@@ -53,7 +68,7 @@
                 <h3>Alchemist</h3>
                 <p>Follow your heart’s hidden treasure.</p>
                 <p>$10 Only</p>
-                <a class="primarybutton"  href="#">SHOP NOW <i class="fa-solid fa-arrow-right"></i></a>
+                <a class="primarybutton mobileButtonTopMargin"  href="#">SHOP NOW <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="card flex">
                 <img class="card-image" src="./assets/book4.png" alt="">
@@ -67,46 +82,46 @@
         </section>
 
         <section class="niches flex" id="nichesection" >
-            <h2>EXPLORE DIFFERENT NICHES</h2>
+            <h2>EXPLORE DIFFERENT NICHES BELOW</h2>
         </section>
 
         <section class="niche" id="nichesection">
-            <div class="nichecards flex">
+            <div class="nichecards flex nicheMobile">
                     <div class="card flex">
                         <img class="card-image" src="./assets/book5.png" alt="">
                         <h3>SPACE</h3>
                         <p>Discover books that unravel the wonders of space, from astronaut adventures to the secrets of the cosmos.</p>
-                        <a class="primarybutton"  href="#">Explore Niche <i class="fa-solid fa-arrow-right"></i> </a>
+                        <a class="primarybutton"  href="#">Explore Niche<i class="fa-solid fa-arrow-right"></i> </a>
                     </div>
-                    <div class="card flex">
+                    <div class="card flex"> 
                         <img class="card-image" src="./assets/book6.png" alt="">
                         <h3>PHILOSPHY</h3>
                         <p>Explore timeless ideas and profound thinkers that challenge the mind and awaken the soul.</p>
-                        <a class="primarybutton p"  href="#">Explore Niche <i class="fa-solid fa-arrow-right"></i> </a>
+                        <a class="primarybutton p"  href="#">Explore Niche<i class="fa-solid fa-arrow-right"></i> </a>
                     </div>
                     <div class="card flex">
                         <img class="card-image" src="./assets/book7.png" alt="">
                         <h3>SCIENCE FICTION</h3>
                         <p>Journey through galaxies, dystopias, and futuristic worlds with mind-bending tales that redefine reality.</p>
-                        <a class="primarybutton"  href="#">Explore Niche <i class="fa-solid fa-arrow-right"></i> </a>
+                        <a class="primarybutton"  href="#">Explore Niche<i class="fa-solid fa-arrow-right"></i> </a>
                     </div>
                     <div class="card flex">
                         <img class="card-image" src="./assets/book8.png" alt="">
                         <h3>HISTORY</h3>
                         <p>Uncover the stories, battles, and revolutions that shaped our world—one book at a time.</p>
-                        <a class="primarybutton p1"  href="#">Explore Niche <i class="fa-solid fa-arrow-right"></i> </a>
+                        <a class="primarybutton p1"  href="#">Explore Niche<i class="fa-solid fa-arrow-right"></i> </a>
                     </div>
                     <div class="card flex">
                         <img class="card-image" src="./assets/book9.png" alt="">
                         <h3>Religion</h3>
                         <p>Explore spiritual traditions, holy texts, and timeless teachings that illuminate the soul's journey.</p>
-                        <a class="primarybutton"  href="#">Explore Niche <i class="fa-solid fa-arrow-right"></i></a>
+                        <a class="primarybutton"  href="#">Explore Niche<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="card flex">
                         <img class="card-image" src="./assets/book10.png" alt="">
                         <h3>Geopolitics</h3>
                         <p>Decode the forces shaping nations—where strategy, resources and ideology collide.</p>
-                        <a class="primarybutton p1"  href="#">Explore Niche <i class="fa-solid fa-arrow-right"></i> </a>
+                        <a class="primarybutton p1"  href="#">Explore Niche<i class="fa-solid fa-arrow-right"></i> </a>
                     </div>
             </div>
         </section>
@@ -160,6 +175,17 @@
 
     <script src="https://kit.fontawesome.com/f0606bcd7a.js" crossorigin="anonymous"></script>
 
+    <script>
+        function showsidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'flex'
+        }
+
+        function hidesidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display = 'none'
+        }
+    </script>
     
 </body>
 </html>
