Made Responsive for all devices

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <img class="card-image" src="./assets/book9.png" alt="">
                         <h3>Religion</h3>
                         <p>Explore spiritual traditions, holy texts, and timeless teachings that illuminate the soul's journey.</p>
-                        <a class="primarybutton"  href="#">Explore Niche<i class="fa-solid fa-arrow-right"></i></a>
+                        <a class="primarybutton button1"  href="#">Explore Niche<i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="card flex">
                         <img class="card-image" src="./assets/book10.png" alt="">
@@ -186,6 +186,5 @@
             sidebar.style.display = 'none'
         }
     </script>
-    
 </body>
 </html>
